--- a/package.json
+++ b/package.json
@@ -15,17 +15,19 @@
   "dependencies": {
     "array.prototype.find": "^2.0.4",
     "array.prototype.findindex": "^2.0.2",
-    "asch-sandbox": "^1.0.0",
     "async": "^2.6.0",
     "bitcore-mnemonic": "^1.5.0",
+    "body-parser": "^1.18.2",
     "bytebuffer": "^5.0.1",
     "change-case": "^3.0.2",
     "colors": "^1.2.1",
     "commander": "^2.15.1",
     "compression": "^1.7.2",
     "cors": "^2.8.4",
+    "daemon": "^1.1.0",
     "decompress-zip": "^0.3.1",
     "ejs": "^2.5.9",
+    "etm-vm": "git+https://github.com/entanmo/etm-vm.git",
     "express": "^4.16.3",
     "express-domain-middleware": "^0.1.0",
     "extend": "^3.0.1",
@@ -34,6 +36,7 @@
     "mathjs": "^4.1.2",
     "method-override": "^2.3.10",
     "protocol-buffers": "^4.0.4",
+    "randomstring": "^1.1.5",
     "request": "^2.85.0",
     "rimraf": "^2.6.2",
     "shelljs": "^0.8.1",
