--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash": "^4.17.5",
     "mathjs": "^4.1.2",
     "method-override": "^2.3.10",
+    "nat-upnp": "^1.1.1",
     "node-pow-addon": "https://gitee.com/just-anohaker/multi-node.git",
     "protocol-buffers": "^4.0.4",
     "randomstring": "^1.1.5",
