添加增强协议 ，签名不能直连就广播

--- a/config/config.json
+++ b/config/config.json
@@ -13,7 +13,8 @@
     "list": [],
     "blackList": [],
     "options": {
-      "timeout": 4000
+      "timeout": 4000,
+      "pingTimeout":500
     }
   },
   "forging": {
