--- a/config/config.json
+++ b/config/config.json
@@ -10,7 +10,20 @@
     }
   },
   "peers": {
-    "list": [],
+    "list": [
+      {
+        "ip": "52.187.232.98", 
+        "port":4096
+      },
+      {
+        "ip": "40.114.70.112", 
+        "port":4096
+      },
+      {
+        "ip": "122.112.246.141", 
+        "port":4096
+      }
+    ],
     "blackList": [],
     "options": {
       "timeout": 4000,
