fix async bug and add missing dependency

--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "compression": "^1.7.2",
     "cors": "^2.8.4",
     "daemon": "^1.1.0",
-    "decompress-zip": "^0.3.1",
+    "decompress": "^4.2.0",
     "ejs": "^2.5.9",
+    "etm-js": "git+https://github.com/entanmo/etm-js.git",
     "etm-vm": "git+https://github.com/entanmo/etm-vm.git",
     "express": "^4.16.3",
     "express-domain-middleware": "^0.1.0",
@@ -41,7 +42,7 @@
     "rimraf": "^2.6.2",
     "shelljs": "^0.8.1",
     "socket.io": "^2.1.0",
-    "sodium": "^2.0.1",
+    "sodium": "^2.0.3",
     "strftime": "^0.10.0",
     "underscore": "^1.8.2",
     "util-extend": "^1.0.3",
