change db to better-sqlite

--- a/config/config.json
+++ b/config/config.json
@@ -10,20 +10,7 @@
     }
   },
   "peers": {
-    "list": [
-      {
-        "ip": "52.187.232.98", 
-        "port":4096
-      },
-      {
-        "ip": "40.114.70.112", 
-        "port":4096
-      },
-      {
-        "ip": "122.112.246.141", 
-        "port":4096
-      }
-    ],
+    "list": [],
     "blackList": [],
     "options": {
       "timeout": 4000,
@@ -31,8 +18,7 @@
     }
   },
   "forging": {
-    "secret": [
-    ],
+    "secret": [],
     "access": {
       "whiteList": [
         "127.0.0.1"
