--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "array.prototype.find": "^2.0.4",
     "array.prototype.findindex": "^2.0.2",
     "async": "^2.6.0",
+    "better-sqlite3": "=4.1.4",
     "bitcore-mnemonic": "^1.5.0",
     "body-parser": "^1.18.2",
     "bytebuffer": "^5.0.1",
@@ -33,6 +34,7 @@
     "extend": "^3.0.1",
     "ip": "^1.1.5",
     "lodash": "^4.17.5",
+    "lru-cache": "=4.1.3",
     "mathjs": "^4.1.2",
     "method-override": "^2.3.10",
     "nat-upnp": "^1.1.1",
@@ -43,7 +45,7 @@
     "rimraf": "^2.6.2",
     "shelljs": "^0.8.1",
     "socket.io": "^2.1.0",
-    "sodium": "^2.0.1",
+    "sodium": "github:paixaop/node-sodium",
     "strftime": "^0.10.0",
     "underscore": "^1.8.2",
     "util-extend": "^1.0.3",
