--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "array.prototype.find": "^2.0.4",
     "array.prototype.findindex": "^2.0.2",
     "async": "^2.6.0",
-    "better-sqlite3": "=4.1.4",
+    "better-sqlite3": "^4.1.4",
     "bitcore-mnemonic": "^1.5.0",
     "body-parser": "^1.18.2",
     "bytebuffer": "^5.0.1",
@@ -45,7 +45,7 @@
     "rimraf": "^2.6.2",
     "shelljs": "^0.8.1",
     "socket.io": "^2.1.0",
-    "sodium": "^2.0.1",
+    "sodium-native": "^2.2.2",
     "strftime": "^0.10.0",
     "underscore": "^1.8.2",
     "util-extend": "^1.0.3",
