--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "underscore": "^1.8.2",
     "util-extend": "^1.0.3",
     "valid-url": "^1.0.9",
+    "winston": "^3.1.0",
+    "winston-kafka-stream": "0.0.1",
     "z-schema": "^3.20.0"
   }
 }
