替换新版本 miner功能

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "daemon": "^1.1.0",
     "decompress-zip": "^0.3.1",
     "ejs": "^2.5.9",
+    "entanmo-miner": "https://gitee.com/just-anohaker/multi-node.git",
     "etm-vm": "git+https://github.com/entanmo/etm-vm.git",
     "express": "^4.16.3",
     "express-domain-middleware": "^0.1.0",
@@ -38,7 +39,6 @@
     "mathjs": "^4.1.2",
     "method-override": "^2.3.10",
     "nat-upnp": "^1.1.1",
-    "node-pow-addon": "https://gitee.com/just-anohaker/multi-node.git",
     "protocol-buffers": "^4.0.4",
     "randomstring": "^1.1.5",
     "request": "^2.85.0",
