--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "array.prototype.find": "^2.0.4",
     "array.prototype.findindex": "^2.0.2",
     "async": "^2.6.0",
+    "axios": "=0.18.0",
     "better-sqlite3": "^4.1.4",
     "bitcore-mnemonic": "^1.5.0",
     "body-parser": "^1.18.2",
