--- a/config/config.9.json
+++ b/config/config.9.json
@@ -2,7 +2,7 @@
   "port": 5010,
   "peerPort": 5011,
   "address": "0.0.0.0",
-  "publicIp": "",
+  "publicIp": "3.112.19.136",
   "logLevel": "debug",
   "magic": "20190514",
   "api": {
