--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "daemon": "^1.1.0",
     "decompress-zip": "^0.3.1",
     "ejs": "^2.5.9",
-    "entanmo-miner": "https://gitee.com/just-anohaker/multi-node.git",
+    "entanmo-miner": "git+https://gitee.com/just-anohaker/multi-node.git",
     "etm-js": "git+https://github.com/entanmo/etm-js.git",
     "etm-vm": "git+https://github.com/entanmo/etm-vm.git",
     "bittorrent-dht": "git+https://github.com:entanmo/etm-dht.git",
